[package]
name = "leroyjenkins"
version = "0.2.0"
publish = false
description = "Follow ban logs to manage ipsets"
repository = "https://github.com/lichess-org/leroyjenkins"
readme = "README.md"
license = "GPL-3.0+"
edition = "2021"

[lib]
bench = false # Use criterion harness

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
mini-moka = "0.10.2"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4.4.2", features = ["derive"] }
nftnl = { git = "https://github.com/lichess-org/nftnl-rs", branch = "add-set-elem-timeout"}
mnl = "0.3"
governor = "0.6.0"
humantime = "2.1.0"
rustc-hash = "1.1.0"
mimalloc = "0.1.39"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
