[package]
name = "leroyjenkins"
version = "0.3.1"
publish = false
description = "Follow ban logs to manage nftable sets"
repository = "https://github.com/lichess-org/leroyjenkins"
readme = "README.md"
license = "GPL-3.0+"
edition = "2024"

[lib]
bench = false # Use criterion harness

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
mini-moka = "0.10.2"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4.4.2", features = ["derive"] }
governor = "0.6.0"
humantime = "2.1.0"
rustc-hash = "1.1.0"
mimalloc = "0.1.39"
nftnl-sys = "0.6.4"
mnl-sys = "0.2.2"
libc = "0.2.178"
mnl = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
