[package]
name = "leroyjenkins"
version = "0.3.3-dev"
publish = false
description = "Follow ban logs to manage nftable sets"
repository = "https://github.com/lichess-org/leroyjenkins"
readme = "README.md"
license = "GPL-3.0+"
edition = "2024"

[lib]
bench = false # Use criterion harness

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
mini-moka = "0.10"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
humantime = "2"
rustc-hash = "2"
mimalloc = "0.1"
nftnl-sys = "0.6"
mnl-sys = { version = "0.2", features = ["mnl-1-0-4"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benches"
harness = false
